--- a/fableous_fe/src/containers/App/App.css
+++ b/fableous_fe/src/containers/App/App.css
@@ -4,8 +4,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-width:100%;
+    width:100%;
     min-height: 100vh;
+    background: #61dafb;
 
 }
 
