--- a/fableous_fe/src/containers/App/App.css
+++ b/fableous_fe/src/containers/App/App.css
@@ -5,8 +5,10 @@
     align-items: center;
     justify-content: center;
     width:100%;
-    min-height: 100vh;
+    min-height: 100%;
+    overflow-y: scroll;
     background: #61dafb;
+    position:relative;
 
 }
 
