--- a/fableous_fe/src/containers/App/App.css
+++ b/fableous_fe/src/containers/App/App.css
@@ -1,14 +1,13 @@
 .App {
     text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+        /*display: flex;*/
+        /*flex-direction: column;*/
+        /*align-items: center;*/
+        /*justify-content: center;*/
     max-width: 100vw;
     min-height: 100%;
     /*overflow-y: scroll;*/
     background: #61dafb;
-    z-index: 10;
     overflow: hidden;
 }
 
@@ -18,6 +17,8 @@
     justify-content: center;
     background: #61dafb;
     width: 100% ;
+    position:absolute;
+    overflow: hidden;
 }
 
 .App-logo {
